feat: update api get drone plan (add param max-distance)
