# handler/endpoints.go
@@ -119,7 +119,7 @@ func (s *Server) GetEstateIdStats(ctx echo.Context, estateID string) error {
 	return ctx.JSON(http.StatusOK, resp)
 }
 
-func (s *Server) GetEstateIdDronePlan(ctx echo.Context, estateID string) error {
+func (s *Server) GetEstateIdDronePlan(ctx echo.Context, estateID string, params generated.GetEstateIdDronePlanParams) error {
 	estateId, err := uuid.Parse(estateID)
 	if err != nil {
 		return ctx.JSON(http.StatusBadRequest, entity.BadRequestError)
@@ -148,10 +148,22 @@ func (s *Server) GetEstateIdDronePlan(ctx echo.Context, estateID string) error {
 	}
 
 	var currentHeight, distance int
+	restX := new(int)
+	restY := new(int)
 	for y := 0; y < estate.Width; y++ {
 		if y%2 == 0 {
 			for x := 0; x < estate.Length; x++ {
+				//check max distance if param max-distance exist
+				if params.MaxDistance != nil && distance+10 >= *params.MaxDistance {
+					*restX = x + 1
+					*restY = y + 1
+					break
+				}
+
+				//move forward 10m
 				distance += 10
+
+				//check height difference between plot
 				if x+1 < estate.Length && field[x+1][y]+1 != currentHeight {
 					distance = distance + util.Abs(currentHeight-(field[x+1][y]+1))
 					currentHeight = field[x+1][y] + 1
@@ -159,12 +171,25 @@ func (s *Server) GetEstateIdDronePlan(ctx echo.Context, estateID string) error {
 			}
 		} else {
 			for x := estate.Length - 1; x >= 0; x-- {
+				//check max distance if param max-distance exist
+				if params.MaxDistance != nil && distance+10 >= *params.MaxDistance {
+					*restX = x + 1
+					*restY = y + 1
+					break
+				}
+
+				//move forward 10m
 				distance += 10
+
+				//check height difference between plot
 				if x+1 < estate.Length && field[x+1][y]+1 != currentHeight {
 					distance = distance + util.Abs(currentHeight-(field[x+1][y]+1))
 					currentHeight = field[x+1][y] + 1
 				}
 			}
+		}
+		if params.MaxDistance != nil && distance+10 > *params.MaxDistance {
+			break
 		}
 		// if last plot backward 10 m and add 1 m for landing
 		if y == estate.Width-1 {
@@ -174,5 +199,15 @@ func (s *Server) GetEstateIdDronePlan(ctx echo.Context, estateID string) error {
 
 	var resp generated.EstateDronePlanResponse
 	resp.Distance = distance
+	if params.MaxDistance != nil {
+		resp.Distance = *params.MaxDistance
+		resp.Rest = &struct {
+			X *int "json:\"x,omitempty\""
+			Y *int "json:\"y,omitempty\""
+		}{
+			X: restX,
+			Y: restY,
+		}
+	}
 	return ctx.JSON(http.StatusOK, resp)
 }
